# talk_agentic_effect_systems

./: BRIEF.md  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
docs/plans/: 2026-03-04-effect-systems-agentic-talk-design.md  2026-03-04-effect-systems-talk.md
examples/todo_api/: todo-api.cabal
examples/todo_api/src/: Application.hs  Architecture.hs  CLI.hs  Main.hs  Server.hs
examples/todo_api/src/Api/: Handlers.hs  Mapping.hs  Types.hs
examples/todo_api/src/Domain/: Todo.hs
examples/todo_api/src/Effects/: Clock.hs  Config.hs  IdGen.hs  Logging.hs  TodoRepo.hs  TodoService.hs
examples/todo_api/src/Entrypoints/: Handlers.hs  Mapping.hs  Types.hs
examples/todo_api/src/Interpreters/: Clock.hs  Config.hs  IdGen.hs  Logging.hs  TodoRepo.hs  TodoService.hs
slides/: slides.html  slides.md
talk/: talk-notes.md
